--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ea3d80fd1513f4e98548c2f7fe96d771"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
