--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ea3d80fd1513f4e98548c2f7fe96d771"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4.js"></script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
